--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div style="padding: 40px;">
     <div style="padding-bottom: 30px;">
         <input id="text" type="text" value="Type here" style="width:80%; height: 60px; padding: 10px 20px; font-size: 20px;" /><br />
-        <div style="padding-top: 5px; font-size: 14px;">Type text, url, or smthng and <b>press enter</b> ⏎</div>
+        <div style="padding-top: 5px; font-size: 14px; border: 1px solid #000">Type text, url, or smthng and <b>press enter</b> ⏎</div>
     </div>
     <div id="qrcode" style="width:400px; height:400px;"></div>
 </div>
